--- a/index.html
+++ b/index.html
@@ -41,6 +41,40 @@
 
     </div>
 
+
+  </div>
+
+  <!-- MODAL -->
+  <div id="modal">
+    <div class="inner-modal flex items-center justify-center 
+      rounded bg-white relative">
+      <div class="max-h-[90vh]">
+        <!-- img here -->
+        <img id="modalImg" src="" alt="">
+      </div>
+      <div class="p-[10px] flex flex-col w-[20rem] justify-center items-center">
+
+        <!-- closeBtn -->
+        <div class="justify-self-end items-self-end">
+          <div id="closeBtn" style="
+          position: absolute;
+          right: 1rem;
+          top: 1rem;
+          " class="p-[15px] max-w-max rounded">
+            <span>&#x2715</span>
+          </div>
+        </div>
+
+        <div id="modalArtist" class="mt-5 max-w-max p-[10px] rounded text-center">
+          <h1>Art by:</h1>
+          <!-- ARTIST HERE -->
+        </div>
+        <div id="modalUrl" class="color-white mt-4 max-w-max p-[10px] rounded">
+          <!-- ART LINK HERE -->
+        </div>
+        <!-- details here -->
+      </div>
+    </div>
   </div>
 
   <script src="/scripts/script.js"></script>
@@ -49,6 +83,12 @@
       const artDiv = document.getElementById("arts");
       const artistsParentDiv = document.getElementById("artistsParent");
       const artistsDiv = document.getElementById("artists");
+      const modal = document.getElementById("modal");
+      const modalImg = document.getElementById("modalImg");
+      const modalUrl = document.getElementById("modalUrl");
+      const modalArtist = document.getElementById("modalArtist")
+      const closeBtn = document.getElementById("closeBtn");
+
 
       const charactersDiv = document.getElementById("characters");
 
@@ -56,9 +96,32 @@
       callJson = await fetchArt();
 
       allTwtArtist = Object.keys(callJson.twitter);
+      platform = Object.keys(callJson);
 
 
       console.log(`All artist = ${allTwtArtist.length}`);
+
+      // create html elements
+      const create_ArtLink = document.createElement("h3")
+      create_ArtLink.textContent = `post link (${platform})`;
+      create_ArtLink.style.textDecoration = "underline";
+      create_ArtLink.style.color = "blue";
+      create_ArtLink.classList.add("bg-white", "p-[10px]", "rounded");
+
+      const create_Artist = document.createElement("h1");
+      create_Artist.textContent = "Artist";
+
+      const createModalPfpDiv = document.createElement("div");
+      createModalPfpDiv.setAttribute("id", "modalPfp");
+      createModalPfpDiv.style.maxWidth = "200px";
+
+      const createModalPfpImg = document.createElement("img");
+      createModalPfpImg.classList.add("rounded-full", "mt-3", "border-solid", "border-black", "border-[3px]")
+
+      const create_ArtistLink = document.createElement("a");
+      create_ArtistLink.setAttribute("target", "_blank");
+
+      closeBtn.style.cursor = "pointer";
 
       // counter for pfp, para ndi masama sa loop ng img
       async function display(artist, counter) {
@@ -89,10 +152,39 @@
           createDiv.classList.add("mb-4");
           createDiv.classList.add("hover");
           createDiv.style.width = "max-content";
+          createDiv.setAttribute("id", `artImg${i}`);
+
 
           createImg.src = artImg[i];
 
-          artDiv.appendChild(createDiv).appendChild(createLink).appendChild(createImg);
+          let currentUrl = createLink;
+          let modalOpener = createDiv;
+
+          modalOpener.addEventListener("click", () => {
+            create_Artist.textContent = allTwtArtist[counter];
+            create_ArtistLink.setAttribute("href", artistProfile[i]);
+
+            modal.style.display = "flex";
+
+            modalImg.src = createImg.src;
+
+            createModalPfpImg.src = artistPfp[i];
+
+            modalArtist.appendChild(create_Artist);
+            modalArtist.appendChild(createModalPfpDiv).appendChild(create_ArtistLink).appendChild(createModalPfpImg);
+
+            modalUrl.appendChild(currentUrl).appendChild(create_ArtLink);
+          });
+
+          closeBtn.addEventListener("click", () => {
+            modal.style.display = "none";
+          })
+
+          modal.addEventListener("click", (e) => {
+            if (e.target === modal) { modal.style.display = "none" };
+          })
+
+          artDiv.appendChild(createDiv).appendChild(createImg);
 
         }
 
@@ -117,9 +209,11 @@
         artistsDiv.appendChild(createDiv_Artist).appendChild(createLink_Artist).appendChild(createImg_Artist);
       }
 
+      modal.style.display = "none";
 
       artistsParentDiv.style.transition = "all 0.5s ease";
       artistsDiv.style.transition = "min-height 0.5s ease, max-height 0.5s ease";
+      closeBtn.style.transition = "background-color 0.3s ease, color 0.3s ease";
 
       artistsDiv.addEventListener("mouseenter", () => {
         artistsDiv.classList.remove("max-h-[30vh]");
@@ -130,6 +224,16 @@
         artistsDiv.classList.remove("max-h-[96vh]");
         artistsDiv.classList.add("max-h-[30vh]");
       });
+
+      closeBtn.addEventListener("mouseenter", () => {
+        closeBtn.style.backgroundColor = "black";
+        closeBtn.style.color = "white";
+      })
+
+      closeBtn.addEventListener("mouseleave", () => {
+        closeBtn.style.removeProperty("background-color");
+        closeBtn.style.color = "black";
+      })
 
 
       for (i = 0; i < allTwtArtist.length; i++) {
