--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </div>
       <div class="mt-5 text-center flex flex-col" style="color: gray">
         <div>that's all for now...</div>
-        <div class="mt-3">created by: <b><a href="https://github.com/deuce09" target="_blank">deuce09</a></b> / <b><a
+        <div class="mt-3">created by: <b>
+            <a href="https://github.com/deuce09" target="_blank">deuce09</a></b> / <b><a
               href="https://www.instagram.com/bloooo.m/" target="_blank">bloom1lk</a></b></div>
       </div>
     </div>
@@ -60,33 +61,33 @@
 
   <!-- MODAL -->
   <div id="modal">
-    <div class="inner-modal flex items-center justify-center 
-      rounded bg-white relative">
-      <div class="max-h-[90vh]">
-        <!-- img here -->
-        <img id="modalImg" src="" alt="">
-      </div>
-      <div class="p-[10px] flex flex-col w-[20rem] justify-center items-center">
-
-        <!-- closeBtn -->
-        <div class="justify-self-end items-self-end">
-          <div id="closeBtn" style="
-          position: absolute;
-          right: 1rem;
-          top: 1rem;
-          " class="p-[15px] max-w-max rounded">
-            <span>&#x2715</span>
+    <div class="modalAnim">
+      <div class="inner-modal flex items-center justify-center
+        rounded bg-white relative">
+        <div class="max-h-[90vh]">
+          <!-- img here -->
+          <img id="modalImg" src="" alt="">
+        </div>
+        <div class="p-[10px] flex flex-col w-[20rem] justify-center items-center">
+          <!-- closeBtn -->
+          <div class="justify-self-end items-self-end">
+            <div id="closeBtn" style="
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+            " class="p-[15px] max-w-max rounded">
+              <span>&#x2715</span>
+            </div>
           </div>
+          <div id="modalArtist" class="mt-5 max-w-max p-[10px] rounded text-center">
+            <h1>Art by:</h1>
+            <!-- ARTIST HERE -->
+          </div>
+          <div id="modalUrl" class="color-white mt-4 max-w-max p-[10px] rounded">
+            <!-- ART LINK HERE -->
+          </div>
+          <!-- details here -->
         </div>
-
-        <div id="modalArtist" class="mt-5 max-w-max p-[10px] rounded text-center">
-          <h1>Art by:</h1>
-          <!-- ARTIST HERE -->
-        </div>
-        <div id="modalUrl" class="color-white mt-4 max-w-max p-[10px] rounded">
-          <!-- ART LINK HERE -->
-        </div>
-        <!-- details here -->
       </div>
     </div>
   </div>
@@ -102,7 +103,7 @@
       const modalUrl = document.getElementById("modalUrl");
       const modalArtist = document.getElementById("modalArtist")
       const closeBtn = document.getElementById("closeBtn");
-
+      const modalAnim = document.querySelectorAll(".modalAnim");
 
       const charactersDiv = document.getElementById("characters");
 
@@ -148,7 +149,7 @@
         const artistProfile = arts.profile
 
         // for middle part (main gallery / pics / img)
-        for (i = 0; i < artImg.length; i++) {
+        for (let i = 0; i < artImg.length; i++) {
           let createLink = document.createElement("a");
           let createDiv = document.createElement("div");
           let createImg = document.createElement("img");
@@ -165,46 +166,84 @@
           createDiv.style.height = "max-content";
           createDiv.classList.add("break-inside-avoid");
           createDiv.classList.add("mb-4");
-          createDiv.classList.add("hover");
+          createDiv.classList.add("hover", "imgLoad");
           createDiv.style.width = "max-content";
           createDiv.setAttribute("id", `artImg${i}`);
 
-
           createImg.src = artImg[i];
+          console.log(artImg[i]);
+
+          createImg.style.display = "none";
+          createImg.style.transform = "translateY(-100px)";
+          createImg.style.opacity = "0";
+          createImg.style.transition = "transform 0.7s ease, opacity 0.5s ease";
+          setTimeout(() => {
+            createImg.style.display = "block";
+          }, 50); setTimeout(() => {
+            createImg.style.transform = "translateY(0px)";
+            createImg.style.opacity = "1";
+          }, 100);
 
           let currentUrl = createLink;
           let modalOpener = createDiv;
 
+          // modal actions
           modalOpener.addEventListener("click", () => {
             create_Artist.textContent = allTwtArtist[counter];
             create_ArtistLink.setAttribute("href", artistProfile[i]);
+            modalAnim.forEach(modalAnim => {
+              modalAnim.style.transition = "transform 0.2s ease, opacity 0.2s ease";
+              modalAnim.style.transform = "translateY(100px)";
+              modalAnim.style.opacity = "0";
+            })
 
-            modal.style.display = "flex";
+            setTimeout(() => {
+              modal.style.display = "flex";
+            }, 90);
+            setTimeout(() => {
+              modalAnim.forEach(modalAnim => {
+                modalAnim.style.transform = "translateY(0px)";
+                modalAnim.style.opacity = "1";
+              })
+            }, 130);
 
-            modalImg.src = createImg.src;
 
             createModalPfpImg.src = artistPfp[i];
-
             modalArtist.appendChild(makeBold).appendChild(create_Artist);
             modalArtist.appendChild(createModalPfpDiv).appendChild(create_ArtistLink).appendChild(createModalPfpImg);
 
             modalUrl.appendChild(currentUrl).appendChild(create_ArtLink);
+            modalImg.src = "";
+            modalImg.src = createImg.src;
           });
-
-          closeBtn.addEventListener("click", () => {
-            modal.style.display = "none";
-          })
-
-          modal.addEventListener("click", (e) => {
-            if (e.target === modal) { modal.style.display = "none" };
-          })
 
           artDiv.appendChild(createDiv).appendChild(createImg);
 
         }
 
+        closeBtn.addEventListener("click", () => {
+          modal.style.display = "none";
+
+          modalAnim.forEach(modalAnim => {
+            modalAnim.style.transform = "translateY(100px)";
+            modalAnim.style.opacity = "0";
+          });
+        });
+
+        modal.addEventListener("click", (e) => {
+          if (e.target === modal) {
+            modal.style.display = "none";
+            modalAnim.forEach(modalAnim => {
+              modalAnim.style.transform = "translateY(100px)";
+              modalAnim.style.opacity = "0";
+            });
+          };
+        });
+
+
         // for right-side (pfp/profile/artist)
         let createDiv_Artist = document.createElement("div");
+        let createDiv_Artist_Parent = document.createElement("div");
         let createLink_Artist = document.createElement("a");
         let createImg_Artist = document.createElement("img");
 
@@ -212,6 +251,8 @@
         createDiv_Artist.classList.add("w-15");
         createDiv_Artist.classList.add("bg-white");
         createDiv_Artist.classList.add("mb-2");
+        createDiv_Artist_Parent.classList.add("artistFocus");
+        createDiv_Artist_Parent.classList.add("p-[5px]");
 
         createLink_Artist.setAttribute("href", artistProfile[counter]);
         createLink_Artist.setAttribute("target", "_blank");
@@ -221,14 +262,83 @@
         createImg_Artist.alt = allTwtArtist[counter];
         createImg_Artist.title = allTwtArtist[counter];
 
-        artistsDiv.appendChild(createDiv_Artist).appendChild(createLink_Artist).appendChild(createImg_Artist);
+        artistsDiv.appendChild(createDiv_Artist_Parent).appendChild(createDiv_Artist).appendChild(createLink_Artist).appendChild(createImg_Artist);
       }
-
-      modal.style.display = "none";
 
       artistsParentDiv.style.transition = "all 0.5s ease";
       artistsDiv.style.transition = "min-height 0.5s ease, max-height 0.5s ease";
       closeBtn.style.transition = "background-color 0.3s ease, color 0.3s ease";
+
+
+      setTimeout(() => {
+        const imgLoad = document.querySelectorAll(".imgLoad");
+        const artistFocus = document.querySelectorAll(".artistFocus");
+
+        console.log(imgLoad);
+
+
+        artistFocus.forEach(artist => {
+          artist.style.zIndex = "10";
+          artist.style.transform = "translateX(-70px)";
+          artist.style.opacity = "0";
+          artist.style.transition = "transform 0.4s cubic-bezier(0.36, 0.92, 0.94, 1), opacity 0.3s ease";
+        });
+
+        artistsDiv.addEventListener("mouseenter", () => {
+          artistFocus.forEach(artist => {
+            artist.style.transform = "translateX(0px)";
+            artist.style.opacity = "0.3";
+          });
+        });
+
+        artistsDiv.addEventListener("mouseleave", () => {
+          artistFocus.forEach(artist => {
+            artist.style.transform = "translateX(-30px)";
+            artist.style.opacity = "0";
+
+          });
+        });
+
+        artistFocus.forEach(artist => {
+          artist.addEventListener("mouseenter", () => {
+            artist.style.transform = "scale(1.2)";
+            artist.style.opacity = "1";
+
+            if (artist.previousElementSibling) {
+              artist.previousElementSibling.style.opacity = "0.5"
+              if (artist.previousElementSibling.previousElementSibling) {
+                artist.previousElementSibling.previousElementSibling.style.opacity = "0.4"
+              }
+            }
+
+            if (artist.nextElementSibling) {
+              artist.nextElementSibling.style.opacity = "0.5"
+              if (artist.nextElementSibling.nextElementSibling) {
+                artist.nextElementSibling.nextElementSibling.style.opacity = "0.4"
+              }
+            }
+          });
+
+          artist.addEventListener("mouseleave", () => {
+            artist.style.transform = "scale(1)";
+            artist.style.opacity = "0.4";
+            if (artist.nextElementSibling) {
+              artist.nextElementSibling.style.opacity = "0.3"
+              if (artist.nextElementSibling.nextElementSibling) {
+                artist.nextElementSibling.nextElementSibling.style.opacity = "0.3"
+              }
+            }
+
+            if (artist.previousElementSibling) {
+              artist.previousElementSibling.style.opacity = "0.3"
+              if (artist.previousElementSibling.previousElementSibling) {
+                artist.previousElementSibling.previousElementSibling.style.opacity = "0.3"
+              }
+            }
+          });
+
+        });
+      }, 700)
 
       artistsDiv.addEventListener("mouseenter", () => {
         artistsDiv.classList.remove("max-h-[30vh]");
