--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="https://github.com/deuce09" target="_blank" id="githubLink">deuce09</a></b> / <b>
             <a href="https://www.instagram.com/bloooo.m/" target="_blank" id="instagramLink">bloom1lk</a></b></div>
         <div class="mt-3 flex gap-5">
-
+          
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <script src="scripts/script.js"></script>
+  <script src="../scripts/script.js"></script>
   <script>
     (async function () {
       const artDiv = document.getElementById("arts");
