--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <script src="../scripts/script.js"></script>
+  <script src="./scripts/script.js"></script>
   <script>
     (async function () {
       const artDiv = document.getElementById("arts");
