--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <!-- <i id="rightSideHover"></i> -->
         </div>
       </div>
-      <div class="lg:columns-5 md:columns-3 sm:columns-2 px-[25px] py-[20px] bg-slate-950 rounded">
+      <div class="xl:columns-5 lg:columns-4 md:columns-3 sm:columns-2 xs:columns-1 px-[25px] py-[20px] bg-slate-950 rounded">
         <div id="arts">
           <!-- art pics -->
         </div>
