--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
-  <title>Bloom's Favorite Arts</title>
+  <title>Deuce Favorite Arts</title>
 </head>
 
 <body class="bg-gray-900" style="overflow: hidden">
