--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </div>
 
-  <script src="./script.js"></script>
+  <script src="./scripts/script.js"></script>
   <script>
     (async function () {
       const artDiv = document.getElementById("arts");
