--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <!-- <i id="rightSideHover"></i> -->
         </div>
       </div>
-      <div class="lg:columns-5 md:columns-3 sm:columns-2 px-[25px] py-[20px] bg-slate-950 rounded">
-        <div id="arts">
+      <div class="px-[25px] py-[20px] bg-slate-950 rounded">
+        <div id="arts" class="xl:columns-5 lg:columns-4 md:columns-3 sm:columns-2">
           <!-- art pics -->
         </div>
       </div>
