--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 </head>
 
 <body class="bg-gray-900" style="overflow: hidden">
-
-  <div class="flex gap-x-3 gap-y-2 m-4">
+  <div id="startUpIndicator" class="grid grid-row" style="position: absolute; top: 1rem; left: 1rem; color: gray">
+    <i id="startUpText"></i>
+  </div>
+  <div id="allDiv" style="display: none;" class="flex gap-x-3 gap-y-2 m-4">
 
     <!-- LEFT SIDE -->
     <div id="charactersParent" class="flex items-center">
@@ -63,8 +65,8 @@
         <div class="mt-3" id="footerIndicator">gallery created by: <b>
             <a href="https://github.com/deuce09" target="_blank" id="githubLink">deuce09</a></b> / <b>
             <a href="https://www.instagram.com/bloooo.m/" target="_blank" id="instagramLink">bloom1lk</a></b></div>
-        
-            <div class="mt-5 flex flex-row max-h-[30px] justify-center gap-5">
+
+        <div class="mt-5 flex flex-row max-h-[30px] justify-center gap-5">
           <a href="https://github.com/deuce09">
             <svg height="30px" width="30px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
               <g>
@@ -75,8 +77,9 @@
           </a>
 
           <a href="https://www.instagram.com/bloooo.m/">
-            <svg height="30px" width="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-              x="0px" y="0px" viewBox="0 0 56.7 56.7" enable-background="new 0 0 56.7 56.7" xml:space="preserve">
+            <svg height="30px" width="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 56.7 56.7"
+              enable-background="new 0 0 56.7 56.7" xml:space="preserve">
               <g>
                 <path fill="gray"
                   d="M28.2,16.7c-7,0-12.8,5.7-12.8,12.8s5.7,12.8,12.8,12.8S41,36.5,41,29.5S35.2,16.7,28.2,16.7z M28.2,37.7   c-4.5,0-8.2-3.7-8.2-8.2s3.7-8.2,8.2-8.2s8.2,3.7,8.2,8.2S32.7,37.7,28.2,37.7z" />
@@ -149,7 +152,7 @@
   </div>
 
   <script type="module" src="./scripts/contents.js" defer></script>
- 
+
 
 </body>
 
