--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="mt-5 mb-5 text-center flex flex-col" style="color: gray" id="footer">
-        <div id="middleEnd">that's all for now... <i id="middleIndicator">(these drawings/arts are not mine)</i></div>
+        <div id="middleEnd">that's all for now... <i id="middleIndicator">(these drawings / arts are not mine)</i></div>
         <div class="mt-3" id="footerIndicator">gallery created by: <b>
             <a href="https://github.com/deuce09" target="_blank" id="githubLink">deuce09</a></b> / <b>
             <a href="https://www.instagram.com/bloooo.m/" target="_blank" id="instagramLink">bloom1lk</a></b></div>
@@ -76,7 +76,7 @@
             </svg>
           </a>
 
-          <a href="https://www.instagram.com/bloooo.m/">
+          <a href="https://www.instagram.com/bloooo.m/" target="_blank">
             <svg height="30px" width="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 56.7 56.7"
               enable-background="new 0 0 56.7 56.7" xml:space="preserve">
